--- a/h4ck3r.html
+++ b/h4ck3r.html
@@ -21,7 +21,7 @@
                 <hr>
                 <a href="https://github.com/dhmodh">GitHub</a>
                 <a href="https://instagram.com/lDMXl">Instagram</a>
-                <a href="https://linkedin.com/in/Dishant Modh">Linkedin</a>
+                <a href="https://https://www.linkedin.com/in/dishant-modh-3334071a3/">Linkedin</a>
                 
         </div>
         <div class="navbar">
